--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "node --test --import tsx"
+    "test": "node --test --import tsx --experimental-test-module-mocks"
   },
   "dependencies": {
     "nuxt": "^4.3.0",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^1.13.0",
     "@nuxt/kit": "^4.3.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^25.1.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
