--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^1.13.0",
     "@nuxt/kit": "^4.3.0",
+    "@nuxt/test-utils": "^3.23.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^25.1.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.8.1",
     "tsx": "^4.20.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
