--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@nuxt/test-utils": "^3.23.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^25.1.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "happy-dom": "^20.5.0",
     "prettier": "^3.8.1",
     "tsx": "^4.20.2",
     "typescript": "^5.9.3",
