--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "postinstall": "nuxt prepare",
     "test": "vitest run"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@nuxt/icon": "^2.2.1",
     "@nuxtjs/color-mode": "^4.0.0",
     "nuxt": "^4.3.0",
     "vue": "^3.5.27",
-    "vue-router": "^4.6.4"
-  },
-  "devDependencies": {
+    "vue-router": "^4.6.4",
     "@nuxt/eslint-config": "^1.13.0",
     "@nuxt/kit": "^4.3.0",
     "@nuxt/test-utils": "^3.23.0",
@@ -28,6 +27,7 @@
     "eslint-config-prettier": "^10.1.8",
     "happy-dom": "^20.5.0",
     "prettier": "^3.8.1",
+    "tailwindcss": "3.4.19",
     "tsx": "^4.20.2",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
