--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "postinstall": "nuxt prepare",
     "test": "vitest run"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@nuxt/icon": "^2.2.1",
-    "@nuxtjs/color-mode": "^4.0.0",
-    "nuxt": "^4.3.0",
-    "vue": "^3.5.27",
-    "vue-router": "^4.6.4",
     "@nuxt/eslint-config": "^1.13.0",
+    "@nuxt/icon": "^2.2.1",
     "@nuxt/kit": "^4.3.0",
     "@nuxt/test-utils": "^3.23.0",
+    "@nuxtjs/color-mode": "^4.0.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^25.1.0",
+    "@vite-pwa/nuxt": "^1.1.0",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "happy-dom": "^20.5.0",
+    "nuxt": "^4.3.0",
     "prettier": "^3.8.1",
     "tailwindcss": "3.4.19",
     "tsx": "^4.20.2",
     "typescript": "^5.9.3",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vue": "^3.5.27",
+    "vue-router": "^4.6.4"
   }
 }
